// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component Initial rendering should allow for conditional rendering of items 1`] = `
<div>
  <ul
    class="List"
    role="listbox"
    tabindex="0"
  >
    <li
      class="ListItem List__item"
    >
      <span>
        Item 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`List component Initial rendering should render List correctly without keyboard navigation (isControlledNavigation) 1`] = `
<div>
  <ul
    class="List"
  >
    <li
      class="ListItem List__item"
    >
      <span>
        Item 1
      </span>
    </li>
    <li
      class="ListItem List__item"
    >
      <span>
        Item 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`List component Initial rendering should render List correctly without keyboard navigation (isControlledNavigation) 2`] = `
<div>
  <ul
    class="List"
  >
    <li
      class="ListItem List__item"
    >
      <span>
        Item 1
      </span>
    </li>
    <li
      class="ListItem List__item"
    >
      <span>
        Item 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`List component Initial rendering should render interactive List correctly 1`] = `
<div>
  <ul
    class="List"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      role="option"
    >
      <span>
        Item 1
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      role="option"
    >
      <span>
        Item 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`List component enriching children with props should not overwrite classes on children 1`] = `
<div>
  <ul
    class="List"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item test"
      role="option"
    >
      <span>
        Item 1
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item test"
      role="option"
    >
      <span>
        Item 1
      </span>
    </li>
  </ul>
</div>
`;
